Fixed about page background on mobile Fixed the about page background not going behind all content on mobile. This is one of the parts of Issue #11

--- a/css/about.css
+++ b/css/about.css
@@ -60,7 +60,6 @@
     background: url(../img/chi.png) repeat-x top left;
     background-size: cover;
     top:0px;
-    position:absolute;
     width:100%;
     z-index:-1;
 }
